--- a/css/slides.css
+++ b/css/slides.css
@@ -1,7 +1,7 @@
 @font-face{
-	font-family: 'FuturaHandwritten';
+	font-family: 'Pangolin', cursive;
 	font-style: normal;
-	src: url('FuturaHandwritten.ttf') format('truetype');
+	src: url('Pangolin-Regular.ttf') format('truetype');
 }
 
 html,body{
@@ -16,7 +16,7 @@ body{
 
 	background: #fff;
 
-	font-family: 'FuturaHandwritten';
+	font-family: 'Pangolin', cursive;
 	color: #333;
 	font-size: 20px;
 
@@ -184,7 +184,7 @@ s{
 }
 .button #text{
 	
-	font-family: 'FuturaHandwritten';
+	font-family: 'Pangolin', cursive;
 	color: #000;
 	font-size: 24px;
 
