:bento: Really replace font for cyrillic support

--- a/peeps/peeps.css
+++ b/peeps/peeps.css
@@ -1,12 +1,12 @@
 @font-face{
-	font-family: 'FuturaHandwritten';
+	font-family: 'Pangolin', cursive;
 	font-style: normal;
-	src: url('../css/FuturaHandwritten.ttf') format('truetype');
+	src: url('../css/Pangolin-Regular.ttf') format('truetype');
 }
 
 body{
 	background: #222;
-	font-family: "FuturaHandwritten";
+	font-family: 'Pangolin', cursive;
 	font-size: 22px;
 	color: #222;
 	margin: 0;
